--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
     "node": "10.16.0",
     "npm": "6.9.0"
   },
-  "description": "A basic application for creating new MOBA characters for various games",
+  "description": "A basic application for creating new hero ideos for Dota 2",
   "main": "./server/app.js",
   "scripts": {
     "buildLoginBundle": "babel ./client/login ./client/helper --presets react --out-file ./hosted/loginBundle.js",
     "buildHomeBundle": "babel ./client/app/home.js ./client/helper --presets react --out-file ./hosted/homeBundle.js",
     "buildCreateBundle": "babel ./client/app/create.js ./client/helper --presets react --out-file ./hosted/createBundle.js",
-    "build": "npm run buildLoginBundle && npm run buildHomeBundle && npm run buildCreateBundle",
+    "buildBrowseBundle": "babel ./client/app/browse.js ./client/helper --presets react --out-file ./hosted/browseBundle.js",
+    "buildAccountBundle": "babel ./client/app/account.js ./client/helper --presets react --out-file ./hosted/accountBundle.js",
+    "build": "npm run buildLoginBundle && npm run buildHomeBundle && npm run buildCreateBundle && npm run buildBrowseBundle && npm run buildAccountBundle",
     "watchLoginBundle": "babel --watch ./client/login ./client/helper --presets react --out-file ./hosted/loginBundle.js",
     "watchAppBundle": "babel --watch ./client/app ./client/helper --presets react --out-file ./hosted/bundle.js",
     "watchHomeBundle": "babel --watch ./client/app/home.js ./client/helper --presets react --out-file ./hosted/homeBundle.js",
     "watchCreateBundle": "babel --watch ./client/app/create.js ./client/helper --presets react --out-file ./hosted/createBundle.js",
+    "watchBrowseBundle": "babel --watch ./client/app/browse.js ./client/helper --presets react --out-file ./hosted/browseBundle.js",
+    "watchAccountBundle": "babel --watch ./client/app/account.js ./client/helper --presets react --out-file ./hosted/accountBundle.js",
     "nodemon": "nodemon --watch ./server ./server/app.js",
     "start": "node ./server/app.js",
     "pretest": "eslint ./server --fix",
